# av-trajectory-planner

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
benchmark/: run_speed_test.py  speed_test_scenario.txt
bicycle_model/: bicycle_model.tex
include/: AvConversions.hpp  AvStructs.hpp  AvTrajectoryPlanner.hpp  IterativeLQR.hpp
proposal/: bibliography.bib  project_proposal_jjbennet.tex
scenarios/: sample1.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt  simple_trajectories.py  simple_trajectory_1.txt
simulator/: .sample_trajectory.txt.swp  obstacleWaypoints.txt  sample_trajectory.txt  simulator.kv  simulator.py  simulatorObject.py  testSimulatorObject.py  vehicleTrajectory.txt
src/lib_cpp/: AvTrajectoryPlanner.cpp  IterativeLQR.cpp
src/lib_python/: AvTrajectoryPlannerPython.cpp
src/test/: main.cpp  test_bindings.py
